--- a/wish-me-happy-birthday.ipynb
+++ b/wish-me-happy-birthday.ipynb
@@ -2,42 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1a503d4333f258c",
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2024-03-22T05:35:00.165081Z",
-     "start_time": "2024-03-22T05:34:47.785736Z"
+     "start_time": "2024-03-22T06:11:40.511538Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running on local URL:  http://127.0.0.1:7886\n",
-      "\n",
-      "To create a public link, set `share=True` in `launch()`.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div><iframe src=\"http://127.0.0.1:7886/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": ""
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from transformers import GPT2LMHeadModel, GPT2Tokenizer\n",
@@ -100,7 +74,8 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    },
    "id": "15d3fd08198e1e2d"
   }
