fix: invalid notebook

--- a/wish-me-birthday.ipynb
+++ b/wish-me-birthday.ipynb
@@ -2,16 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1a503d4333f258c",
+   "execution_count": 1,
+   "id": "initial_id",
    "metadata": {
-    "collapsed": false,
-    "is_executing": true,
+    "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2024-03-22T06:11:40.511538Z"
+     "end_time": "2024-03-22T06:16:45.204156Z",
+     "start_time": "2024-03-22T06:16:28.202383Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on local URL:  http://127.0.0.1:7861\n",
+      "\n",
+      "To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "<IPython.core.display.HTML object>",
+      "text/html": "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": ""
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "from transformers import GPT2LMHeadModel, GPT2Tokenizer\n",
@@ -32,7 +58,7 @@
     "        output = model.generate(input_ids, max_length=200, num_return_sequences=1,\n",
     "                                temperature=0.9, do_sample=True, pad_token_id=tokenizer.eos_token_id)\n",
     "\n",
-    "  \n",
+    "\n",
     "    generated_text = tokenizer.decode(output[0], skip_special_tokens=True)\n",
     "    lines = generated_text.split('\\n')\n",
     "    relevant_part = \"\"\n",
@@ -52,51 +78,36 @@
     "                     title=\"Birthday Greeting Generator\", description=\"Введите имя, кого вы хотите пожелать на день рождения)\",\n",
     "                     examples=[[name] for name in example_names])\n",
     "\n",
-    "# Launch the Gradio interface\n",
     "iface.launch()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### Description | Описание\n",
-    "\n",
-    "Итак, я использовал `PyTorch` для функций глубокого обучения (мне просто было удобнее использовать графический процессор - GPU ) и библиотеку преобразователей HuggingFace для доступа к предварительно обученным языковым моделям, в частности <a href=\"https://huggingface.co/ai-forever/rugpt3small_based_on_gpt2\">GPT-2 (sberbank-ai/rugpt3small_based_on_gpt2) </a>. Загрузив модель GPT-2 и токенизатор, я смог генерировать поздравления с днем рождения на основе введенных пользователем имен. Модель оптимизирована для генерации поздравлений с днем рождения, что делает ее подходящей для этой задачи. <a href=\"https://www.gradio.app/\">Gradio<a/> был использован для создания интуитивно понятного интерфейса, позволяющего пользователям легко взаимодействовать с моделью.\n",
-    "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "2d2452895924ea2a"
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "is_executing": true
+    "collapsed": false
    },
-   "id": "15d3fd08198e1e2d"
+   "id": "8c8bd4b3fb066a53"
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
