--- a/wish-me-happy-birthday.ipynb
+++ b/wish-me-happy-birthday.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "initial_id",
+   "execution_count": 2,
+   "id": "1a503d4333f258c",
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T06:16:45.204156Z",
-     "start_time": "2024-03-22T06:16:28.202383Z"
+     "end_time": "2024-03-22T06:11:45.658467Z",
+     "start_time": "2024-03-22T06:11:40.511538Z"
     }
    },
    "outputs": [
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7861\n",
+      "Running on local URL:  http://127.0.0.1:7860\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -24,7 +24,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      "text/html": "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -33,7 +33,7 @@
      "data": {
       "text/plain": ""
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
     "        output = model.generate(input_ids, max_length=200, num_return_sequences=1,\n",
     "                                temperature=0.9, do_sample=True, pad_token_id=tokenizer.eos_token_id)\n",
     "\n",
-    "\n",
+    "  \n",
     "    generated_text = tokenizer.decode(output[0], skip_special_tokens=True)\n",
     "    lines = generated_text.split('\\n')\n",
     "    relevant_part = \"\"\n",
@@ -78,36 +78,55 @@
     "                     title=\"Birthday Greeting Generator\", description=\"Введите имя, кого вы хотите пожелать на день рождения)\",\n",
     "                     examples=[[name] for name in example_names])\n",
     "\n",
+    "# Launch the Gradio interface\n",
     "iface.launch()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Description | Описание\n",
+    "\n",
+    "Итак, я использовал `PyTorch` для функций глубокого обучения (мне просто было удобнее использовать графический процессор - GPU ) и библиотеку преобразователей HuggingFace для доступа к предварительно обученным языковым моделям, в частности <a href=\"https://huggingface.co/ai-forever/rugpt3small_based_on_gpt2\">GPT-2 (sberbank-ai/rugpt3small_based_on_gpt2) </a>. Загрузив модель GPT-2 и токенизатор, я смог генерировать поздравления с днем рождения на основе введенных пользователем имен. Модель оптимизирована для генерации поздравлений с днем рождения, что делает ее подходящей для этой задачи. <a href=\"https://www.gradio.app/\">Gradio<a/> был использован для создания интуитивно понятного интерфейса, позволяющего пользователям легко взаимодействовать с моделью.\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2d2452895924ea2a"
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-22T06:11:45.664962Z",
+     "start_time": "2024-03-22T06:11:45.661476Z"
+    }
    },
-   "id": "8c8bd4b3fb066a53"
+   "id": "15d3fd08198e1e2d",
+   "execution_count": 2
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
